# flet_app

./: .gitignore  README.md  pyproject.toml
docs/: flet-SKILL.md  flet-plan-template.md
docs/plans/: PLAN_dart-db-flet-conversion.md
src/: __init__.py  main.py
src/components/: __init__.py  chart_components.py  corporation_card.py  financial_table.py  navigation.py  search_bar.py  sync_progress.py
src/models/: __init__.py  corporation.py  database.py  filing.py  financial_statement.py
src/services/: __init__.py  analysis_service.py  compare_service.py  corporation_service.py  dart_service.py  financial_service.py  sync_service.py
src/utils/: __init__.py  cache.py  errors.py  formatters.py  logging_config.py
src/views/: __init__.py  analytics_view.py  compare_view.py  corporations_view.py  detail_view.py  home_view.py  settings_view.py
tests/: conftest.py
tests/integration/: test_analytics_view.py  test_app_structure.py  test_compare_view.py  test_corporations_view.py  test_detail_view.py  test_settings_view.py
tests/unit/: test_analysis_service.py  test_compare_service.py  test_corporation_service.py  test_dart_service.py  test_database.py  test_financial_service.py  test_sync_service.py
