[project]
name = "dart-db-flet"
version = "0.1.0"
description = "DART 전자공시 데이터 수집/분석 데스크톱 애플리케이션"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "gmdjlee"}
]
license = {text = "MIT"}
keywords = ["dart", "financial", "analysis", "flet", "desktop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flet>=0.28.0",
    "dart-fss>=0.4.15",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.1",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[project.scripts]
dart-db = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.black]
target-version = ['py311']
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flet]
# Application settings
org = "dev.dartdb"
product = "dart-db-flet"
project = "dart-db-flet"

# Build settings
build_number = 1
splash_color = "#2196F3"
splash_dark_color = "#1565C0"

[tool.flet.desktop]
# Desktop-specific settings
product_name = "DART-DB"
company_name = "gmdjlee"
copyright = "© 2026 gmdjlee"
file_description = "DART 전자공시 데이터 분석 애플리케이션"

[tool.flet.macos]
# macOS-specific settings
bundle_id = "dev.dartdb.dart-db-flet"

[tool.flet.windows]
# Windows-specific settings
product_name = "DART-DB"

[tool.flet.linux]
# Linux-specific settings
product_name = "dart-db"
